2.2
  * removed unused imports
    Changed: wc/*.py
  * updated filters
    Changed: config/*.zap
  * fixed parsing of end tags with trailing garbage
    Changed: wc/parser/htmllex.l
  * cope with falsely advertised GIF images, the GIF parsers ignores
    them now
    Changed: wc/filter/GifImage.py
  * fix setting of missing host header
    Changed: wc/proxy/ClientServerMatchmaker.py

2.1
  * lots of minor bugs fixed running pychecker
    Changed: a lot of .py files
  * make mimelist of filter modules to class variables
    Changed: wc/filter/*.py
  * you can now have a priority in a filter
    Changed: wc/__init__.py, wc/filter/Filter.py
  * fix some bugs with not detecting changed config values
    Changed: wc/webgui/context/config.py
  * improved footnote text in proxy configuration
    Changed: templates/classic/config.html
  * remove i18n from web context files, use i18n:translate in templates
    Changed: wc/webgui/context/*.py, templates/classic/*.html
  * wait until enough image data is available to get size info, this
    fixes the "could not get image size" errors
    Changed: wc/filter/ImageSize.py
  * added from glib project the detection of va_copy macro to configure.in
    and use that for compiling the JS library
    Changed: configure.in, libjs/jsprf.c, libjs/jsprf.h, libjs/Makefile.am
    Closes: SF bug #788040
  * fixed parent proxy authentication, added Digest authentication
    (both client and server authentication)
    Added: wc/proxy/auth/parse.py
    Changed: wc/proxy/auth/{digest,basic,__init__}.py,
      wc/proxy/ClientServerMatchmaker.py
  * fix parsing of JavaScript multi-line comments
    Changed: wc/parser/htmllex.l
  * handle JS background fetching more gracefully and consistent
    Changed: wc/proxy/HttpProxyClient.py, wc/filter/HtmlParser.py

2.0
  * require and use python 2.3
    Changed: a lot config and build files
  * remove -std=gnu99 option from compiler call, fixes compilation on
    platforms which do not have GNU gcc 3.x.